Code tidy up after sonarqube quality check.